# tantivy_c

./: Cargo.toml  LICENSE
src/: index.rs  lib.rs  query.rs  schema.rs
