[package]
name = "tantivy_c"
version = "0.1.0"
authors = ["Nazar Mishturak <nazarmx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tantivy = "0.10.0"
paste = "0.1.5"
take_mut = "0.2.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"