[package]
name = "tantivy_c"
version = "0.1.0"
authors = ["Nazar Mishturak <nazarmx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
paste = "1.0.0"
take_mut = "0.2.2"
chrono = "0.4.7"

[dependencies.tantivy]
git = "https://github.com/tantivy-search/tantivy"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
